--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     
     <body>
-        <div class="container">
+        <div class="container line">
         <header class="site-head">
          
             <!-- Навигация -->
@@ -41,7 +41,7 @@
             </address>
              </header>
         </div>
-            <div class="line"></div>
+
         <main>
             <!-- блок герой -->
             <section class="hero">
