--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="img-list">
-                    <li class="">
+                    <li class="i-item">
                         <img src="./img/it.jpg" alt="технологии" width="370" height="295">
                     </li>
-                    <li>
+                    <li class="i-item">
                         <img src="./img/itwork.jpg" alt="компьютеры" width="370" height="295">
                     </li>
-                    <li>
+                    <li class="i-item">
                         <img src="./img/itcomp.jpg" alt="мониторы" width="370" height="295">
                     </li>
                 </ul>
@@ -105,7 +105,7 @@
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team list">
     
-                    <li>
+                    <li class="t-item">
                         <article class="card">
                         <div class="card-thumb">
                         <img class="employee" src="./img/ihor_demianenko.jpg" alt="Игорь Демьяненко" width="270" height="260">
@@ -116,7 +116,7 @@
                         </div>
                         </article>
                     </li>
-                    <li>
+                    <li class="t-item">
                         <article class="card">
                         <div class="card-thumb">
                         <img class="employee" src="./img/olga_repina.jpg" alt="Ольга Репина" width="270" height="260">
@@ -127,7 +127,7 @@
                         </div>
                         </article>
                     </li>
-                    <li>
+                    <li class="t-item">
                         <article class="card">
                         <div class="card-thumb">
                         <img class="employee" src="./img/nikolay_tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
@@ -138,7 +138,7 @@
                         </div>
                         </article>
                     </li>
-                    <li>
+                    <li class="t-item">
                         <article class="card">
                         <div class="card-thumb">
                         <img class="employee" src="./img/mihail_ermakov.jpg" alt="Михаил Ермаков" width="270" height="260">
