--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
             <address class="address">
                 <ul class="contacts list">
                     <li class="ls-item">
+                        <svg class="envelope">
+                            <use href="../img/symbol-defs.svg#icon-envelope"></use>
+                        </svg>
                         <a class="contact-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="ls-item">
+                        <svg class="envelope">
+                            <use href="../img/symbol-defs.svg#icon-smartphone"></use>
+                        </svg>
                         <a class="contact-item link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
@@ -100,7 +106,7 @@
             </section>
     
             <!-- команда -->
-            <section class="section"> 
+            <section class="section s-back"> 
                 <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team list">
@@ -113,6 +119,12 @@
                         <div class="img-content">
                         <h3 class="title">Игорь Демьяненко</h3>
                         <p class="team-position" lang="en">Product Designer</p>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
                         </div>
                         </article>
                     </li>
@@ -124,6 +136,12 @@
                         <div class="img-content">
                         <h3 class="title">Ольга Репина</h3>
                         <p class="team-position" lang="en">Frontend Developer</p>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
                         </div>
                         </article>
                     </li>
@@ -135,6 +153,12 @@
                         <div class="img-content">
                         <h3 class="title">Николай Тарасов</h3>
                         <p class="team-position" lang="en">Marketing</p>
+                        <ul class="social">
+                            <li class="soc-icon"><a  class="soc-lnk tw" href=""></a></li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">inst</a></li>
+                            <li class="soc-icon"><a  class="soc-lnk" href="">tw</a></li>
+                            <li class="soc-icon"><a  class="soc-lnk" href="">in</a></li> 
+                        </ul>
                         </div>
                         </article>
                     </li>
@@ -146,6 +170,12 @@
                         <div class="img-content">
                         <h3 class="title">Михаил Ермаков</h3>
                         <p class="team-position" lang="en">UI Designer</p>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
                         </div>
                         </article>
                     </li>
