--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
             <address class="address">
                 <ul class="contacts list">
                     <li class="ls-item">
-                        <svg class="envelope">
-                            <use href="../img/symbol-defs.svg#icon-envelope"></use>
-                        </svg>
+                       <a class="envelope-item" href="mailto:info@devstudio.com"><svg class="envelope">
+                            <use href="./img/symbol-defs.svg#icon-envelope"></use>
+                        </svg></a>
                         <a class="contact-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="ls-item">
-                        <svg class="envelope">
-                            <use href="../img/symbol-defs.svg#icon-smartphone"></use>
-                        </svg>
+                        <a class="envelope-item" href="tel:+380961111111"><svg class="smartphone">
+                            <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+                        </svg></a>
                         <a class="contact-item link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
@@ -67,18 +67,38 @@
                 <ul class="features list">
     
                     <li class="f-item">
+                        <div class="f-icon">
+                        <svg class="f-svg">
+                            <use href="./img/symbol-defs.svg#icon-antenna"></use>
+                        </svg>
+                        </div>
                         <h3 class="title">Внимание к деталям</h3>
                         <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="f-item">
+                        <div class="f-icon">
+                            <svg class="f-svg">
+                                <use href="./img/symbol-defs.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Пунктуальность</h3>
                         <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="f-item">
+                        <div class="f-icon">
+                            <svg class="f-svg">
+                                <use href="./img/symbol-defs.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Планирование</h3>
                         <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="f-item">
+                        <div class="f-icon">
+                            <svg class="f-svg">
+                                <use href="./img/symbol-defs.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Современные технологии</h3>
                         <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -119,11 +139,29 @@
                         <div class="img-content">
                         <h3 class="title">Игорь Демьяненко</h3>
                         <p class="team-position" lang="en">Product Designer</p>
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                        <ul class="social">
+                            <li class="soc-icon">
+                                <a class="soc-lnk tw" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
                         </ul>
                         </div>
                         </article>
@@ -136,11 +174,29 @@
                         <div class="img-content">
                         <h3 class="title">Ольга Репина</h3>
                         <p class="team-position" lang="en">Frontend Developer</p>
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                        <ul class="social">
+                            <li class="soc-icon">
+                                <a class="soc-lnk tw" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
                         </ul>
                         </div>
                         </article>
@@ -154,10 +210,27 @@
                         <h3 class="title">Николай Тарасов</h3>
                         <p class="team-position" lang="en">Marketing</p>
                         <ul class="social">
-                            <li class="soc-icon"><a  class="soc-lnk tw" href=""></a></li>
-                            <li class="soc-icon"><a class="soc-lnk" href="">inst</a></li>
-                            <li class="soc-icon"><a  class="soc-lnk" href="">tw</a></li>
-                            <li class="soc-icon"><a  class="soc-lnk" href="">in</a></li> 
+                            <li class="soc-icon">
+                                <a  class="soc-lnk tw" href="">
+                             <svg class="soc-svg">
+                             <use class="soc-use" href="./img/symbol-defs.svg#icon-instagram"></use>
+                             </svg>
+                            </a></li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">
+                                <svg class="soc-svg">
+                                    <use class="soc-use" href="./img/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a></li>
+                            <li class="soc-icon"><a  class="soc-lnk" href="">
+                                <svg class="soc-svg">
+                                    <use class="soc-use" href="./img/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a></li>
+                            <li class="soc-icon"><a  class="soc-lnk" href="">
+                                <svg class="soc-svg">
+                                    <use class="soc-use" href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a></li> 
                         </ul>
                         </div>
                         </article>
@@ -170,11 +243,29 @@
                         <div class="img-content">
                         <h3 class="title">Михаил Ермаков</h3>
                         <p class="team-position" lang="en">UI Designer</p>
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                        <ul class="social">
+                            <li class="soc-icon">
+                                <a class="soc-lnk tw" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </a></li>
+                            <li class="soc-icon"><a class="soc-lnk" href="">
+                                    <svg class="soc-svg">
+                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a></li>
                         </ul>
                         </div>
                         </article>
@@ -183,31 +274,55 @@
                 </div>
             </section>
 <!--Клиенты-->
-           <!-- <section class="section s-clients">
+           <section class="section s-clients">
                 <div class="container">
                     <h2 class="section-title">Постоянные клиенты</h2>
-                    <ul class="list">
-                        <li>
-                            <img src="" alt="технологии" width="170" height="">
+                    <ul class="logotipes list">
+                        <li class="clns">
+                            <a class="clients-lnk" href="">
+                                <svg class="yaco-svg">
+                                    <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li>
-                            <img src="" alt="компьютеры" width="170" height="">
+                            <li class="clns">
+                                <a class="clients-lnk" href="">
+                                    <svg class="yaco-svg">
+                                        <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        <li class="clns">
+                            <a class="clients-lnk" href="">
+                                <svg class="yaco-svg">
+                                    <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li>
-                            <img src="" alt="мониторы" width="170" height="">
+                        <li class="clns">
+                            <a class="clients-lnk" href="">
+                                <svg class="yaco-svg">
+                                    <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li>
-                            <img src="" alt="технологии" width="170" height="">
+                        <li class="clns">
+                            <a class="clients-lnk" href="">
+                                <svg class="yaco-svg">
+                                    <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li>
-                            <img src="" alt="компьютеры" width="170" height="">
-                        </li>
-                        <li>
-                            <img src="" alt="мониторы" width="170" height="">
+                        <li class="clns">
+                            <a class="clients-lnk" href="">
+                                <svg class="yaco-svg">
+                                    <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
-            </section>-->
+            </section>
         </main>
     
         <footer class="footer">
