--- a/index.html
+++ b/index.html
@@ -144,23 +144,23 @@
                             <li class="soc-icon">
                                 <a class="soc-lnk tw" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#instagram">icon-instagram</use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="soc-icon"><a class="soc-lnk" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#twitter"></use>
                                     </svg>
                                 </a></li>
                             <li class="soc-icon"><a class="soc-lnk" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#facebook"></use>
                                     </svg>
                                 </a></li>
                             <li class="soc-icon"><a class="soc-lnk" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#linkedin"></use>
                                     </svg>
                                 </a></li>
                         </ul>
@@ -179,23 +179,23 @@
                             <li class="soc-icon">
                                 <a class="soc-lnk tw" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="soc-icon"><a class="soc-lnk" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#twitter"></use>
                                     </svg>
                                 </a></li>
                             <li class="soc-icon"><a class="soc-lnk" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#facebook"></use>
                                     </svg>
                                 </a></li>
                             <li class="soc-icon"><a class="soc-lnk" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#linkedin"></use>
                                     </svg>
                                 </a></li>
                         </ul>
@@ -214,22 +214,22 @@
                             <li class="soc-icon">
                                 <a  class="soc-lnk tw" href="">
                              <svg class="soc-svg">
-                             <use class="soc-use" href="./img/symbol-defs.svg#icon-instagram"></use>
+                             <use class="soc-use" href="./img/symbol-defs.svg#instagram"></use>
                              </svg>
                             </a></li>
                             <li class="soc-icon"><a class="soc-lnk" href="">
                                 <svg class="soc-svg">
-                                    <use class="soc-use" href="./img/symbol-defs.svg#icon-twitter"></use>
+                                    <use class="soc-use" href="./img/symbol-defs.svg#twitter"></use>
                                 </svg>
                             </a></li>
                             <li class="soc-icon"><a  class="soc-lnk" href="">
                                 <svg class="soc-svg">
-                                    <use class="soc-use" href="./img/symbol-defs.svg#icon-facebook"></use>
+                                    <use class="soc-use" href="./img/symbol-defs.svg#facebook"></use>
                                 </svg>
                             </a></li>
                             <li class="soc-icon"><a  class="soc-lnk" href="">
                                 <svg class="soc-svg">
-                                    <use class="soc-use" href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                    <use class="soc-use" href="./img/symbol-defs.svg#linkedin"></use>
                                 </svg>
                             </a></li> 
                         </ul>
@@ -248,23 +248,23 @@
                             <li class="soc-icon">
                                 <a class="soc-lnk tw" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="soc-icon"><a class="soc-lnk" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#twitter"></use>
                                     </svg>
                                 </a></li>
                             <li class="soc-icon"><a class="soc-lnk" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#facebook"></use>
                                     </svg>
                                 </a></li>
                             <li class="soc-icon"><a class="soc-lnk" href="">
                                     <svg class="soc-svg">
-                                        <use class="soc-use" href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        <use class="soc-use" href="./img/symbol-defs.svg#linkedin"></use>
                                     </svg>
                                 </a></li>
                         </ul>
@@ -281,43 +281,43 @@
                     <ul class="logotipes list">
                         <li class="clns">
                             <a class="clients-lnk" href="">
-                                <svg class="yaco-svg">
-                                    <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                <svg class="svg" height="44px"; width="49px";>
+                                    <use class="clients-use" href="./img/symbol-defs.svg#yaco"></use>
                                 </svg>
                             </a>
                         </li>
                             <li class="clns">
                                 <a class="clients-lnk" href="">
-                                    <svg class="yaco-svg">
-                                        <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                    <svg class="svg" height="52px" width="40px">
+                                        <use class="clients-use" href="./img/symbol-defs.svg#company"></use>
                                     </svg>
                                 </a>
                             </li>
                         <li class="clns">
                             <a class="clients-lnk" href="">
-                                <svg class="yaco-svg">
-                                    <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                <svg class="svg" height="43px" width="41px">
+                                    <use class="clients-use" href="./img/symbol-defs.svg#objectco"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="clns">
                             <a class="clients-lnk" href="">
-                                <svg class="yaco-svg">
-                                    <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                <svg class="svg" height="42px" width="80px">
+                                    <use class="clients-use" href="./img/symbol-defs.svg#peters"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="clns">
                             <a class="clients-lnk" href="">
-                                <svg class="yaco-svg">
-                                    <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                <svg class="svg" height="47px" width="59px">
+                                    <use class="clients-use" href="./img/symbol-defs.svg#brand"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="clns">
                             <a class="clients-lnk" href="">
-                                <svg class="yaco-svg">
-                                    <use class="clients-use" href="./img/symbol-defs.svg#icon-logo-1"></use>
+                                <svg class="svg" height="45px" width="88px">
+                                    <use class="clients-use" href="./img/symbol-defs.svg#tacline"></use>
                                 </svg>
                             </a>
                         </li>
