--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,15 @@
         <address class="address">
           <ul class="contacts list">
             <li class="ls-item">
+              <a class="envelope-item" href="mailto:info@devstudio.com"><svg class="envelope">
+                  <use href="./img/symbol-defs.svg#icon-envelope"></use>
+                </svg></a>
               <a class="contact-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="ls-item">
+              <a class="envelope-item" href="tel:+380961111111"><svg class="smartphone">
+                  <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+                </svg></a>
               <a class="contact-item link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
