--- a/index.html
+++ b/index.html
@@ -33,16 +33,18 @@
             <address class="address">
                 <ul class="contacts list">
                     <li class="ls-item">
-                       <a class="envelope-item" href="mailto:info@devstudio.com"><svg class="envelope" width="16px" height="12px">
-                            <use href="./images/icons.svg#icon-envelope"></use>
-                        </svg></a>
-                        <a class="contact-item link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="envelope-item link" href="mailto:info@devstudio.com"><svg class="envelope" width="16px" height="12px">
+                                <use href="./images/icons.svg#icon-envelope"></use>
+                            </svg>
+                        info@devstudio.com
+                    </a>
                     </li>
                     <li class="ls-item">
-                        <a class="envelope-item" href="tel:+380961111111"><svg class="smartphone" width="10px" height="16px">
+                        <a class="envelope-item link" href="tel:+380961111111"><svg class="smartphone" width="10px" height="16px">
                             <use href="./images/icons.svg#icon-smartphone"></use>
-                        </svg></a>
-                        <a class="contact-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
                     </li>
                 </ul>
             </address>
